# traceforge

./: .gitignore  LICENSE  README.md  pyproject.toml  traceforge.yaml
.github/workflows/: ci.yml  release.yml
docs/: example-report.html  replay-faq.md
examples/: basic_agent.py  github_actions.yml  langchain_agent.py  langgraph_agent.py
scripts/: make_html_screenshot.py  make_terminal_svg.py
src/traceforge/: __init__.py  cli.py  naming.py  pricing.py  pytest_plugin.py  replay.py  serialiser.py  span.py  trace.py  tracer.py
src/traceforge/integrations/: anthropic.py  langchain.py  openai.py
src/traceforge/report/: html_report.py  jsonl.py  terminal.py
src/traceforge/storage/: __init__.py  file_store.py
tests/: test_pricing.py  test_pytest_plugin.py  test_replay.py  test_serialiser.py  test_tracer.py
tests/fixtures/: sample_trace.jsonl
